mdapi_output_dir/objects/RAM__c.object
<CustomObject>
    <label>RAM</label>
    <nameField>
        <label>RAM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RAM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_capacity__c</fullName>
        <label>Memory capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Memory_Clock__c</fullName>
        <label>Memory Clock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_slats__c</fullName>
        <label>Number of slats</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Memory__c</fullName>
        <label>Type of Memory</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>